@@ -4,6 +4,7 @@
 	* Add composer.json
 	* Add missing labels
 	* Update version to 4.0.0
+	* Resolves #66381: Wrong link generation in mails when config absRefPrefix = /
 
 2016-02-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
